smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-after-shape.smithy
// Syntax error at line 6, column 1: Unknown shape type: use | Model
namespace smithy.example

string MyString

use smithy.api#String
